# qfault_cc

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  NOTICE  README.md  ROADMAP.md  flake.nix
.claude/: settings.json
.claude/agents/: cpp-pro.md  reviewer.md
.claude/commands/: adr.md  log.md  phase-exit.md  phase-kickoff.md  resume.md
.claude/epics/stage-1-ir-pass-manager/: 10.md  11.md  12.md  13.md  14.md  15.md  16.md  17.md  18.md  2.md  3.md  4.md  5.md  6.md  7.md  8.md  9.md  epic.md  github-mapping.md
.claude/rules/: cpp.md  qec.md  routing.md
.github/workflows/: ci.yml
cmake/: dependency_versions.cmake  qcec_config.cmake  qir_version.cmake  stim_config.cmake
docs/: architecture.md  glossary.md
docs/adr/: 0001-ir-representation.md  0002-synthesis-provider-interface.md  0003-global-code-distance.md  0004-gridsynth-as-default.md  0005-qir-version-pinning.md  0006-lattice-surgery-routing.md  0007-msd-factory-selection.md  0008-synthesis-algorithm-portfolio.md  0009-verification-strategy.md  0010-output-backend-portfolio.md  0011-phase-polynomial-zx-pass.md  0012-pybind11-vs-nanobind.md  0013-skprovider-as-fallback-oracle.md  0014-failed-approach-tracking.md  0015-apache2-license.md  0016-conference-target-ladder.md  0017-reproducibility-infrastructure.md  0018-mlir-dialect.md  0019-boundary-conventions.md  0020-cnot-recipe.md  0021-stim-oracle-integration.md  README.md  template.md
docs/phases/stage-1-frontend/: todo.md
docs/phases/stage-1-ir-pass-manager/: exit-report.md  kickoff.md  spec.md  todo.md
docs/phases/stage-2-synthesis/: kickoff.md  prompt_plan.md  spec.md  todo.md
docs/phases/stage-2.5-verification-benchmark-harness/: kickoff.md  spec.md  todo.md
docs/phases/stage-3-qec/: kickoff.md  spec.md  todo.md
docs/phases/stage-6-native-synthesis/: kickoff.md  spec.md  todo.md
docs/phases/stage-7-formal-stretch/: kickoff.md  spec.md  todo.md
include/qfault/frontend/: Lexer.hpp  Parser.hpp
include/qfault/ir/: GateKind.hpp  IRLevel.hpp  LogicalGate.hpp  LogicalQubit.hpp  MeasBasis.hpp  PatchCoord.hpp  PatchOp.hpp  PatchOpKind.hpp  QFaultIRModule.hpp
include/qfault/passes/: NoOpPass.hpp  PassBase.hpp  PassContext.hpp  PassManager.hpp
include/qfault/passes/synthesis/: GridSynthProvider.hpp  SKProvider.hpp  SynthesisProvider.hpp  TGateSynthesisPass.hpp
include/qfault/util/: Overload.hpp
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
scripts/: asan-ubsan.sh  bench-synthesis.sh  compare-stim.sh  full-build.sh  quick-test.sh
src/qfault/frontend/: Lexer.cpp  Parser.cpp
src/qfault/ir/: QFaultIRModule.cpp
src/qfault/passes/synthesis/: GridSynthProvider.cpp  SKProvider.cpp
src/qfault/util/: qfault_stub.cpp
tests/integration/: test_ir_two_level.cpp  test_noop_roundtrip.cpp  test_qasm_roundtrip.cpp  test_synthesis_roundtrip.cpp
tests/unit/: placeholder_test.cpp  test_GridSynthProvider.cpp  test_Lexer.cpp  test_LogicalGate.cpp  test_Parser.cpp  test_PassBase.cpp  test_PassContext.cpp  test_PassManager.cpp  test_PatchOp.cpp  test_QFaultIRModule.cpp  test_SKProvider.cpp  test_SynthesisProvider.cpp  test_TCountValidation.cpp  test_TGateSynthesisPass.cpp
